# zenardy-hackton

./: .env  app_streamlit.py  index.html  main.py  pyproject.toml  test.db  test.py  test.txt  yse.ipynb
templates/: index.html
